k8s_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mini-pipeline-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: moon-mini-project-ms.dev.daumkakao.io
      http:
        paths:
          - path: /
            backend:
              serviceName: mini-pipeline-ms-svc
              servicePort: 80
    - host: moon-mini-project-gw.dev.daumkakao.io
      http:
        paths:
          - path: /
            backend:
              serviceName: mini-pipeline-gateway-svc
              servicePort: 80
